--- a/forum-project/src/app/app.component.css
+++ b/forum-project/src/app/app.component.css
@@ -1,4 +1,4 @@
-header {
+/* header {
   position: fixed;
   top: 0;
   left: 0;
@@ -17,4 +17,4 @@ header {
 
 footer {
   margin-top:40px;
-}
+} */
