add login & register dialogs

--- a/forum-project/src/app/shared/header/header.component.html
+++ b/forum-project/src/app/shared/header/header.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
   <a routerLink="/" mat-button><span><img src="../../../assets/forum.png" height="26px"><span>Forum</span></span></a>
-  <button mat-button (click)="openDialog()">Login</button>
+  <button mat-button (click)="openLoginDialog()">Login</button>
+  <button mat-button (click)="openRegisterDialog()">Register</button>
 </mat-toolbar>
