--- a/forum-project/src/app/components/auth/login/login.component.html
+++ b/forum-project/src/app/components/auth/login/login.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Login</h1>
-<div mat-dialog-content>
-  <form [formGroup]="loginForm" (click)="kur()">
+<mat-dialog-content>
+  <form [formGroup]="loginForm">
     <mat-form-field>
-      <input matInput type="email" email formControlName="email" />
+      <input matInput type="email" email formControlName="email" placeholder="Email"/>
       <mat-error *ngIf="email.invalid && (email.dirty || email.touched) && email.errors.required">
         Email is required.
       </mat-error>
@@ -11,14 +11,17 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="password" formControlName="password" />
+      <input matInput type="password" formControlName="password" minlength="6" placeholder="Password"/>
       <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.required">
         Password is required.
       </mat-error>
+      <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.minlength">
+        Password must be at least 6 symbols
+      </mat-error>
     </mat-form-field>
-      <div mat-dialog-actions>
-        <button [disabled]="!loginForm.valid" mat-raised-button>Login</button>
-        <button mat-button (click)="onNoClick()">Cancel</button>
-      </div>
   </form>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button [disabled]="!loginForm.valid" mat-raised-button mat-primary (click)="login()">Login</button>
+</mat-dialog-actions>
