--- a/forum-project/src/app/components/auth/login/login.component.css
+++ b/forum-project/src/app/components/auth/login/login.component.css
@@ -4,3 +4,8 @@ mat-form-field {
   margin-left: auto;
   margin-right: auto;
 }
+
+mat-dialog-actions {
+  display: flex;
+  justify-content: center;
+}
