--- a/forum-project/src/app/shared/header/header.component.html
+++ b/forum-project/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary">
   <a routerLink="/" mat-button><span><img src="../../../assets/forum.png" height="26px"><span>Forum</span></span></a>
-  <button mat-button (click)="openLoginDialog()">Login</button>
-  <button mat-button (click)="openRegisterDialog()">Register</button>
+  <span class="blankSpace"></span>
+  <span>
+      <button mat-button (click)="openLoginDialog()">Login</button>
+      <button mat-button (click)="openRegisterDialog()">Register</button>
+  </span>
 </mat-toolbar>
