--- a/forum-project/src/app/components/home/home.component.html
+++ b/forum-project/src/app/components/home/home.component.html
@@ -1,3 +1,29 @@
-<p>
-  home works!
-</p>
+<!--Carousel Wrapper-->
+<div class="col-md-8 margin">
+    <!--Carousel Wrapper-->
+<mdb-carousel [isControls]="true" class="carousel slide carousel-fade" [animation]="'fade'">
+    <!--First slide-->
+    <mdb-carousel-item>
+        <div class="view w-100">
+            <img class="d-block w-100" src="http://www.usingtheirwords.org/wp-content/uploads/2017/09/community-hero.png" alt="First slide">
+            <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+        </div>
+        <div class="carousel-caption">
+            <h3 class="h3-responsive">Welcome to Forum</h3>
+        </div>
+    </mdb-carousel-item>
+    <!--/First slide-->
+    <!--Third slide-->
+    <mdb-carousel-item>
+        <div class="view w-100">
+            <img class="d-block w-100" src="http://www.silencetodo.com/wp-content/uploads/2018/03/1_community_banner-1.png" alt="Third slide">
+            <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+        </div>
+        <div class="carousel-caption">
+            <h3 class="h3-responsive">Welcome to Forum</h3>
+        </div>
+    </mdb-carousel-item>
+    <!--/Third slide-->
+</mdb-carousel>
+<!--/.Carousel Wrapper-->
+</div>
