--- a/forum-project/src/app/shared/header/header.component.html
+++ b/forum-project/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary">
-  <a routerLink="/" mat-button><span><img src="../../../assets/forum.png" height="26px"><span>Forum</span></span></a>
+  <span>
+      <a routerLink="/" mat-button><span><img src="../../../assets/forum.png" height="26px"><span>Forum</span></span></a>
+      <a routerLink="/about" mat-button>About</a>
+  </span>
   <span class="blankSpace"></span>
   <span>
       <button mat-button (click)="openLoginDialog()">Login</button>
