add login, register & logout functionality

--- a/forum-project/src/app/components/auth/register/register.component.html
+++ b/forum-project/src/app/components/auth/register/register.component.html
@@ -27,7 +27,7 @@
         Password is required.
       </mat-error>
       <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.minlength">
-        Password must be at least 6 symbols.
+        Password must be at least 8 symbols.
       </mat-error>
     </mat-form-field>
 
@@ -36,7 +36,7 @@
       <mat-error *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched) && confirmPassword.errors.required">
         Password is required.
       </mat-error>
-      <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && confirmPassword.errors.compare">
+      <mat-error *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched) && confirmPassword.errors.compare">
         Passwords do not match.
       </mat-error>
     </mat-form-field>
