--- a/forum-project/src/app/shared/header/header.component.html
+++ b/forum-project/src/app/shared/header/header.component.html
@@ -4,8 +4,14 @@
       <a routerLink="/about" mat-button>About</a>
   </span>
   <span class="blankSpace"></span>
-  <span>
+  <span *ngIf="!authService.isAuthenticated(); else notAuthenticated">
       <button mat-button (click)="openLoginDialog()">Login</button>
       <button mat-button (click)="openRegisterDialog()">Register</button>
   </span>
+  <ng-template #notAuthenticated>
+      <span>
+        <button *ngIf="authService.isAdmin()" mat-button>Admin</button>
+        <button mat-button (click)="authService.logout()">Logout</button>
+      </span>
+  </ng-template>
 </mat-toolbar>
