--- a/forum-project/src/app/components/posts/post-details/post-details.component.html
+++ b/forum-project/src/app/components/posts/post-details/post-details.component.html
@@ -1,3 +1,7 @@
-<p>
-  post-details works!
-</p>
+<div *ngIf="post; else notFound">
+    <p>{{post.title}}</p>
+    <p>{{post.body}}</p>
+</div>
+<ng-template #notFound>
+  <span>Post not found.</span>
+</ng-template>
