--- a/forum-project/src/app/components/posts/posts-all/posts-all.component.html
+++ b/forum-project/src/app/components/posts/posts-all/posts-all.component.html
@@ -1,3 +1,37 @@
-<p>
-  posts-all works!
-</p>
+<div class="container mt-5" *ngIf="posts">
+  <div>
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th>Author</th>
+          <th>Category</th>
+          <th>Publish date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let p of posts | paginate: { id: 'allPosts', itemsPerPage: pageSize, currentPage: currentPage}" (click)="navigate(p._id)">
+            <td>{{p.title.substr(0, 50)}}</td>
+            <td>{{p.body.substr(0, 50)}}</td>
+            <td>{{p.authorName}}</td>
+            <td>{{p.category.name}}</td>
+            <td>{{p.creationDate.toLocaleString()}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <pagination-controls
+  id="allPosts"
+  (pageChange)="changePage($event)"
+  maxSize="9"
+  directionLinks="true"
+  autoHide="true"
+  previousLabel="Previous"
+  nextLabel="Next"
+  screenReaderPaginationLabel="Pagination"
+  screenReaderPageLabel="page"
+  screenReaderCurrentLabel="You're on page"
+  >
+  </pagination-controls>
+</div>
