--- a/forum-project/src/app/shared/header/header.component.html
+++ b/forum-project/src/app/shared/header/header.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
   <span>
       <a routerLink="/" mat-button><span><img src="../../../assets/forum.png" height="26px"><span>Forum</span></span></a>
-      <a routerLink="/about" mat-button>About</a>
+      <a routerLink="/posts" mat-button>Posts</a>
+      <a routerLink="/posts/create" mat-button *ngIf="authService.isAuthenticated()">Create Post</a>
   </span>
   <span class="blankSpace"></span>
   <span *ngIf="!authService.isAuthenticated(); else notAuthenticated">
@@ -10,6 +11,7 @@
   </span>
   <ng-template #notAuthenticated>
       <span>
+        <a routerLink="/about" mat-button>About</a>
         <button *ngIf="authService.isAdmin()" mat-button>Admin</button>
         <button mat-button (click)="authService.logout()">Logout</button>
       </span>
