--- a/forum-project/src/app/components/category/category-list/category-list.component.html
+++ b/forum-project/src/app/components/category/category-list/category-list.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-6">
           <ul class="list-group">
               <li class="list-group-item btn-custom" *ngFor="let c of leftCatSet">
-                  <a routerLink="/posts">{{c.name}}</a>
+                  <a routerLink="/posts" [queryParams]="{c: c._id}">{{c.name}}</a>
               </li>
           </ul>
       </div>
