--- a/forum-project/src/app/components/posts/post-details/post-details.component.html
+++ b/forum-project/src/app/components/posts/post-details/post-details.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="post; else notFound">
     <h1 class="mt-4">{{post.title}}</h1>
-    <p class="lead">published by {{post.authorName}}</p>
+    <p class="lead">published by {{post.authorName}} on {{post.creationDate.toLocaleString()}}</p>
     <div>
       <p class="lead">{{post.body}}</p>
     </div>
     <div *ngIf="authService.isAuthenticated() || authService.isAdmin()">
-      <a mat-button routerLink="/comments/{{post._id}}">Add Comment</a>
+      <a mat-button routerLink="/comments/create/{{post._id}}">Add Comment</a>
       <a mat-button routerLink="/posts/edit/{{post._id}}" *ngIf="sameAuthor() || authService.isAdmin()">Edit</a>
       <a mat-button *ngIf="sameAuthor() || authService.isAdmin()" (click)="delete()">Delete</a>
     </div>
@@ -18,8 +18,8 @@
           {{c.text}}
         </div>
         <div *ngIf="c.creatorName === authService.userName">
-          <a mat-button routerLink="/comments/edit/{{c._id}}">Edit my comment</a>
-          <a mat-button (click)="deleteComment()">Delete my comment</a>
+          <a mat-button (click)="openEditCommentDialog(c)">Edit my comment</a>
+          <a mat-button (click)="deleteComment(c._id)">Delete my comment</a>
         </div>
       </div>
     </div>
