--- a/forum-project/src/app/components/posts/posts-all/posts-all.component.html
+++ b/forum-project/src/app/components/posts/posts-all/posts-all.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" *ngIf="posts">
+<div class="container mt-5" *ngIf="postsToShow">
   <div>
     <table class="table table-hover table-bordered">
       <thead>
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let p of posts | paginate: { id: 'allPosts', itemsPerPage: pageSize, currentPage: currentPage}" (click)="navigate(p._id)">
+        <tr *ngFor="let p of postsToShow | paginate: { id: 'allPosts', itemsPerPage: pageSize, currentPage: currentPage}" (click)="navigate(p._id)">
             <td>{{p.title.substr(0, 50)}}</td>
             <td>{{p.body.substr(0, 50)}}</td>
             <td>{{p.authorName}}</td>
