--- a/forum-project/src/app/components/home/home.component.html
+++ b/forum-project/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
             <!--First slide-->
             <mdb-carousel-item>
                 <div class="view w-100">
-                    <img class="d-block w-100" src="http://www.usingtheirwords.org/wp-content/uploads/2017/09/community-hero.png" alt="First slide">
+                    <img class="d-block w-100" src="../../../assets/forum-1.png" alt="First slide">
                     <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
                 </div>
                 <div class="carousel-caption">
@@ -18,7 +18,7 @@
             <!--Third slide-->
             <mdb-carousel-item>
                 <div class="view w-100">
-                    <img class="d-block w-100" src="http://www.silencetodo.com/wp-content/uploads/2018/03/1_community_banner-1.png" alt="Third slide">
+                    <img class="d-block w-100" src="../../../assets/1_community_banner-1.png" alt="Third slide">
                     <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
                 </div>
                 <div class="carousel-caption">
