--- a/forum-project/src/app/components/posts/posts-list/posts-list.component.html
+++ b/forum-project/src/app/components/posts/posts-list/posts-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-md-12 row">
+  <div class="col-md-12 row" *ngIf="posts; else notFound">
     <div class="page-header text-center offset-4 col-4">
       <h1>Latest Posts</h1>
     </div>
   </div>
-  <div class="col-md-12 row" *ngIf="posts; else notFound">
-    <div class="col-md-4" *ngFor="let p of posts">
+  <div class="col-md-12 row">
+    <div class="col-md-4 margin" *ngFor="let p of posts">
       <div class="figure post-body">
         <a routerLink="/posts/details/{{p._id}}">
           <div class="card card-body btn-custom">
@@ -23,7 +23,7 @@
       </div>
     </div>
     <ng-template #notFound>
-        <span>No posts found.</span>
+        <div class="col-md-12 row">No posts found.</div>
     </ng-template>
   </div>
 </div>
