add category select
when category selected from home menu, it redirects to '/posts' showing the posts with the given category using store

--- a/forum-project/src/app/components/category/category-list/category-list.component.html
+++ b/forum-project/src/app/components/category/category-list/category-list.component.html
@@ -4,14 +4,14 @@
       <div class="col-lg-6">
           <ul class="list-group">
               <li class="list-group-item btn-custom" *ngFor="let c of leftCatSet">
-                  <a routerLink="/posts" [queryParams]="{c: c._id}">{{c.name}}</a>
+                  <button mat-raised-button mat-primary (click)="changeCategory(c)">{{c.name}}</button>
               </li>
           </ul>
       </div>
       <div class="col-lg-6">
           <ul class="list-group">
               <li class="list-group-item btn-custom" *ngFor="let c of rightCatSet">
-                  <a routerLink="/posts" [queryParams]="{c: c._id}">{{c.name}}</a>
+                  <button mat-raised-button mat-primary (click)="changeCategory(c)">{{c.name}}</button>
               </li>
           </ul>
       </div>
