--- a/forum-project/src/app/components/admin/admin-categories/admin-categories.component.html
+++ b/forum-project/src/app/components/admin/admin-categories/admin-categories.component.html
@@ -25,7 +25,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let c of categories | paginate: { id: 'allCats', itemsPerPage: pageSize, currentPage: currentPage}">
+        <tr [@cats] *ngFor="let c of categories | paginate: { id: 'allCats', itemsPerPage: pageSize, currentPage: currentPage}">
             <td>{{c.name}}</td>
             <td>{{c.creationDate.toLocaleString()}}</td>
             <td><div>
