--- a/forum-project/src/app/components/admin/admin-panel/admin-panel.component.html
+++ b/forum-project/src/app/components/admin/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="text-center margin">
   <button mat-raised-button (click)="showCategories()">Show Categories</button>
   <button mat-raised-button (click)="showUsers()">Show Users</button>
 </div>
