--- a/forum-project/src/app/components/comments/comment-create/comment-create.component.html
+++ b/forum-project/src/app/components/comments/comment-create/comment-create.component.html
@@ -13,7 +13,7 @@
         </mat-error>
       </mat-form-field>
   </form>
-  <mat-dialog-actions align="center">
+  <mat-dialog-actions>
     <button [disabled]="!createForm.valid" mat-raised-button mat-primary (click)="createComment()">Create Comment</button>
   </mat-dialog-actions>
 </div>
