--- a/forum-project/src/app/components/posts/post-create/post-create.component.html
+++ b/forum-project/src/app/components/posts/post-create/post-create.component.html
@@ -33,7 +33,7 @@
             </mat-error>
         </mat-form-field>
   </form>
-  <mat-dialog-actions align="center">
+  <mat-dialog-actions>
     <button [disabled]="!createForm.valid" mat-raised-button mat-primary (click)="createPost()">Create Post</button>
   </mat-dialog-actions>
 </div>
