--- a/forum-project/src/app/components/posts/post-edit/post-edit.component.html
+++ b/forum-project/src/app/components/posts/post-edit/post-edit.component.html
@@ -33,7 +33,7 @@
             </mat-error>
         </mat-form-field>
   </form>
-  <mat-dialog-actions align="center">
+  <mat-dialog-actions>
     <button [disabled]="!editForm.valid" mat-raised-button mat-primary (click)="editPost()">Submit Changes</button>
   </mat-dialog-actions>
 </div>
