--- a/forum-project/src/app/components/posts/posts-all/posts-all.component.html
+++ b/forum-project/src/app/components/posts/posts-all/posts-all.component.html
@@ -20,7 +20,7 @@
       <tbody>
         <tr class="pointer" *ngFor="let p of postsToShow | paginate: { id: 'allPosts', itemsPerPage: pageSize, currentPage: currentPage}" (click)="navigate(p._id)">
             <td>{{p.title.substr(0, 50)}}</td>
-            <td>{{p.body.substr(0, 50)}}</td>
+            <td>{{p.body.substr(0, 50)}}...</td>
             <td>{{p.authorName}}</td>
             <td>{{p.category.name}}</td>
             <td>{{p.creationDate.toLocaleString()}}</td>
