--- a/forum-project/src/app/components/admin/admin-categories/admin-categories.component.scss
+++ b/forum-project/src/app/components/admin/admin-categories/admin-categories.component.scss
@@ -1,6 +1,18 @@
 mat-form-field {
   display: block;
-  width: 75%;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
+}
+mat-dialog-actions {
+  display: flex;
+  justify-content: center;
+}
+
+.margin {
+  margin-right: 5px;
+}
+
+.topmargin {
+  margin-top: 10px;
 }
