--- a/forum-project/src/app/components/admin/admin-edit-category/admin-edit-category.component.scss
+++ b/forum-project/src/app/components/admin/admin-edit-category/admin-edit-category.component.scss
@@ -4,3 +4,8 @@ mat-form-field {
   margin-left: auto;
   margin-right: auto;
 }
+
+mat-dialog-actions {
+  display: flex;
+  justify-content: center;
+}
