--- a/forum-project/src/app/components/admin/admin-users/admin-users.component.html
+++ b/forum-project/src/app/components/admin/admin-users/admin-users.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5" *ngIf="users; else notFound">
   <div>
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover table-bordered table-striped">
       <thead>
         <tr>
           <th>Username</th>
@@ -16,8 +16,8 @@
             <td>{{u.dateRegistered.toLocaleString()}}</td>
             <td>{{u.roles.length > 0 ? true : false }}</td>
             <td>{{u.isBanned}}</td>
-            <td><span *ngIf="!u.isBanned"><button mat-button (click)="banUser(u._id)">Ban</button></span>
-            <span *ngIf="u.isBanned"><button mat-button (click)="unbanUser(u._id)">Unban</button></span></td>
+            <td><span *ngIf="!u.isBanned"><button mat-raised-button (click)="banUser(u._id)">Ban</button></span>
+            <span *ngIf="u.isBanned"><button mat-flat-button (click)="unbanUser(u._id)">Unban</button></span></td>
         </tr>
       </tbody>
     </table>
