--- a/forum-project/src/app/components/posts/posts-list/posts-list.component.html
+++ b/forum-project/src/app/components/posts/posts-list/posts-list.component.html
@@ -5,22 +5,18 @@
     </div>
   </div>
   <div class="col-md-12 row">
-    <div class="col-md-4 margin" *ngFor="let p of posts">
-      <div class="figure post-body">
-        <a routerLink="/posts/details/{{p._id}}">
-          <div class="card card-body btn-custom">
-            <div class="figure post-body">
-              <div class="text-center">
-                <h3>{{p.title.substr(0, 30)}}</h3>
-              </div>
-              <div>{{p.body.substr(0, 50)}}</div>
-            </div>
-            <div>
-                <p>{{p.creationDate.toLocaleString()}}</p>
-            </div>
-          </div>
-        </a>
-      </div>
+    <div class="col-md-4 col-lg-4 mb-4" *ngFor="let p of posts">
+        <h6 class="mb-3 mt-4 pink-text">
+            <i class="fa fa-map "></i>
+            <strong> {{p.categoryName}}</strong>
+        </h6>
+        <h4 class="mb-3 font-weight-bold dark-grey-text">
+            <strong>{{p.title.substr(0, 50)}}</strong>
+        </h4>
+        <p class="grey-text">{{p.body.substr(0, 150)}}...</p>
+        <p class="font-weight-bold dark-grey-text">
+            <i class="fa fa-clock-o pr-2"></i>{{p.creationDate.toLocaleString()}}</p>
+        <a mdbBtn color="pink" rounded="true" size="md" class="waves-light" mdbWavesEffect routerLink="/posts/details/{{p._id}}" >Read more</a>
     </div>
     <ng-template #notFound>
         <div class="col-md-12 row">No posts found.</div>
