add github in footer, format dates in views

--- a/forum-project/src/app/components/about/about.component.html
+++ b/forum-project/src/app/components/about/about.component.html
@@ -15,12 +15,8 @@
                   <p>Sofia, Izgrev, Tyntiava str. 15-17, floor 1</p>
                   Open:
                   <p>10:00 - 20:00 (Monday - Friday)</p>
-                  Phone:
-                  <p>+359 899 55 55 92</p>
-                  Post code:
-                  <p>1113</p>
-                  Email:
-                  <p>info@softuni.bg</p>
+                  <p><mat-icon>phone</mat-icon> +359 899 55 55 92</p>
+                  <p><mat-icon>email</mat-icon> info@softuni.bg</p>
               </mdb-card-text>
             </mdb-card-body>
           </mdb-card>
