--- a/forum-project/src/app/components/posts/post-details/post-details.component.html
+++ b/forum-project/src/app/components/posts/post-details/post-details.component.html
@@ -4,7 +4,7 @@
       <h1 class="mb-4">{{post.title}}</h1>
       <div class="post-meta">
                   <span class="category" (click)="changeCategory(post.category)">{{post.category.name}} </span>
-                  <span class="mr-2"> {{post.creationDate}} </span>
+                  <span class="mr-2"> {{post.creationDate.toLocaleString()}} </span>
                   <span class="ml-2"><span class="fa fa-comments"></span> {{post.comments.length}}</span>
                 </div>
       <div class="post-content-body little-margin">
@@ -23,7 +23,7 @@
       <li class="comment" *ngFor="let c of post.comments">
         <div class="comment-body">
           <h3>{{c.creatorName}}</h3>
-          <div class="meta">{{c.creationDate}}</div>
+          <div class="meta">{{c.creationDate.toLocaleString()}}</div>
           <div class="little-margin"><p>{{c.text}}</p></div>
           <div *ngIf="c.creatorName === authService.userName || authService.isAdmin()">
             <a mat-raised-button (click)="openEditCommentDialog(c)">Edit my comment</a>
