--- a/forum-project/src/app/app.component.html
+++ b/forum-project/src/app/app.component.html
@@ -6,5 +6,5 @@
   type="ball-scale-multiple">
  <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
-<router-outlet></router-outlet>
+<router-outlet *ngIf="postsRequestFinished"></router-outlet>
 <app-footer></app-footer>
