--- a/forum-project/src/app/components/posts/post-edit/post-edit.component.html
+++ b/forum-project/src/app/components/posts/post-edit/post-edit.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="post; else notFound">
   <div class="page-header text-center">
     <h2>Edit Post</h2>
   </div>
@@ -37,3 +37,6 @@
     <button [disabled]="!editForm.valid" mat-raised-button mat-primary (click)="editPost()">Submit Changes</button>
   </mat-dialog-actions>
 </div>
+<ng-template #notFound>
+  <app-not-found></app-not-found>
+</ng-template>
