--- a/forum-project/src/app/components/admin/admin-users/admin-users.component.html
+++ b/forum-project/src/app/components/admin/admin-users/admin-users.component.html
@@ -4,6 +4,7 @@
       <thead>
         <tr>
           <th>Username</th>
+          <th>Email</th>
           <th>Registered on</th>
           <th>Admin</th>
           <th>Banned</th>
@@ -13,6 +14,7 @@
       <tbody>
         <tr [@cats] *ngFor="let u of users | paginate: { id: 'allUsers', itemsPerPage: pageSize, currentPage: currentPage}">
             <td>{{u.username}}</td>
+            <td>{{u.email}}</td>
             <td>{{u.dateRegistered.toLocaleString()}}</td>
             <td>{{u.roles.length > 0 ? true : false }}</td>
             <td>{{u.isBanned}}</td>
